# --

./: README.md  Untitled-1.ini  Untitled-2.ini  pyproject.toml  requirements.txt  test.db
fastapi-core-service/: Dockerfile  README.docker.md  README.md  docker-compose.yml  install_deps.ps1  pyproject.toml  requirements.txt
fastapi-core-service/src/: main.py
fastapi-core-service/src/app/: .env.example  README.md  config.py  create_tables.py  db.py  engine.py  main.py  milvus_client.py  models.py  rag_store_milvus.py  run_engine.py  smoke_milvus.py  smoke_test.py
fastapi-core-service/src/app/api/: routes.py  websocket_routes.py
fastapi-core-service/src/app/core/: conversation_service.py  websocket_manager.py
fastapi-core-service/src/app/models/: conversation.py
fastapi-core-service/src/app/schemas/: conversation.py
fastapi-core-service/src/app/static/: Untitled-1.ini  jpg  jpg2  以农为本.py  初始页面.html  注册.html  登录.html
fastapi-core-service/src/app/static/css/: README.md  styles.css
fastapi-core-service/src/app/static/js/: README.md  main.js
fastapi-core-service/tests/: test_conversation_service.py  test_websocket_manager.py
src/: main.py
src/app/: config.py  db.py  models.py
src/app/api/: routes.py  websocket_routes.py
src/app/core/: conversation_service.py  websocket_manager.py
src/app/models/: conversation.py
src/app/schemas/: conversation.py
tests/: test_conversation_service.py  test_websocket_manager.py
